Fix a vertical shift when loading project images

--- a/cabin/style/screen.styl
+++ b/cabin/style/screen.styl
@@ -270,6 +270,7 @@ body.splash-transition
     clear: both
     max-width: 100%
     margin-bottom: 60px
+    vertical-align: top
     &.shadow
       border-radius: 4px 4px 0 0
       box-shadow: 0 0 2px 1px rgba(cabin_grey_dark, .2)
